# yala

./: .gitignore  CHANGELOG.md  README.md  app.spec  build.sh  build_nuitka.sh  callbacks.py  install.sh  main.py  printer.py  pyproject.toml
.github/workflows/: buid.yml
